20220420 Add api gateway config (configmap) to Spark Operator chart