@@ -89,10 +89,10 @@ func CreateDefaultHiveMetastoreTopology(namePrefix string, s3BucketName string) 
 				CommandEnvironment: map[string]string{
 					CmdEnvHelmExecutable: DefaultHelmExecutable,
 				    CmdEnvWithMinikube: "false",
-					CmdEnvPostgresqlHelmChart: "helm-charts/bitnami/charts/postgresql",
-					CmdEnvHiveMetastoreCreateDatabaseHelmChart: "helm-charts/hive-metastore/charts/hive-metastore-postgresql-create-db",
-					CmdEnvHiveMetastoreInitHelmChart: "helm-charts/hive-metastore/charts/hive-metastore-init-postgresql",
-					CmdEnvHiveMetastoreServerHelmChart: "helm-charts/hive-metastore/charts/hive-metastore-server",
+					CmdEnvPostgresqlHelmChart: "third-party/helm-charts/bitnami/charts/postgresql",
+					CmdEnvHiveMetastoreCreateDatabaseHelmChart: "third-party/helm-charts/hive-metastore/charts/hive-metastore-postgresql-create-db",
+					CmdEnvHiveMetastoreInitHelmChart: "third-party/helm-charts/hive-metastore/charts/hive-metastore-init-postgresql",
+					CmdEnvHiveMetastoreServerHelmChart: "third-party/helm-charts/hive-metastore/charts/hive-metastore-server",
 				},
 				Notes:              map[string]string{},
 			},
